Removed the metadata property from the get recipe API for performance reasons.
